homework2/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: homework2
        image: nikfedoseev/microservice-architecture-homeworks:homework2
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
