homework2/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 8000
  type: NodePort
